Fixed: HTML validation error. Background colour added to <h2> for better contrast for accessibility

--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -56,6 +56,8 @@ h2 {
     margin-right: auto;
     text-transform: uppercase;
     margin-top: 4rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 .common {
     height: 25rem;
